# reference-data-service

./: .gitignore  README.md  pyproject.toml
config/: watchers.yaml
src/reference_data/: __main__.py
src/reference_data/adapters/: base.py  binance.py  bitget.py  bybit.py  coinbase.py  coinbase_intl.py  config.py  okx.py  state.py
src/reference_data/api/: app.py  models.py
src/reference_data/core/: circuit_breaker.py  event_bus.py  rate_limiter.py  service.py  watcher.py
src/reference_data/utils/: logging.py
tests/: conftest.py  test_adapters.py  test_binance_adapter.py  test_bitget_adapter.py  test_bybit_adapter.py  test_circuit_breaker.py  test_coinbase_adapter.py  test_coinbase_intl_adapter.py  test_config.py  test_logging.py  test_models.py  test_okx_adapter.py  test_service.py  test_state.py  test_watcher.py  test_websocket_integration.py
tests/integration/: __init__.py  conftest.py  test_binance_integration.py  test_bitget_integration.py  test_bybit_integration.py  test_coinbase_integration.py  test_coinbase_intl_integration.py  test_okx_integration.py
